--- a/git_Untitled5.ipynb
+++ b/git_Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoaGMp12KcnxkalZy6BO5c",
+      "authorship_tag": "ABX9TyOtPpB1q6sI33oqnTVvLVXS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,6 +109,7 @@
         "print(issubclass(B,A))\n",
         "print(type(B).__name__)\n",
         "c=type('san',(A,),{'x':10})\n",
+        "print(\"value of x any \")\n",
         "print(c.y,c.x)"
       ],
       "metadata": {
@@ -116,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NI3FdXVGqpoK",
-        "outputId": "df9ad622-c61f-45fc-e6a4-b2789b5d20d2"
+        "outputId": "5f150a5d-6793-4033-8546-72035c65bc7a"
       },
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,6 +127,7 @@
           "text": [
             "True\n",
             "type\n",
+            "value of x any \n",
             "89 10\n"
           ]
         }
